# product-crud-app

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: .env.example  Cargo.toml
backend/migrations/: .gitkeep  001_create_products_table.sql  20250502000000_create_products_table.down.sql  20250502000000_create_products_table.up.sql
backend/src/: config.rs  db.rs  error.rs  lib.rs  main.rs
backend/src/db/: mod.rs  pool.rs  products.rs
backend/src/handlers/: mod.rs  products.rs
backend/src/middleware/: mod.rs
backend/src/models/: mod.rs  pagination.rs  product.rs  query_params.rs
backend/src/routes/: health.rs  mod.rs  products.rs
backend/tests/: products_integration.rs
docs/: CHANGELOG.md
docs/adr/: 2026-05-01-docs-update-documentation- 2026-05-01-22-16 .md  2026-05-01-docs-update-documentation- 2026-05-01-22-18 .md  2026-05-01-docs-update-documentation- 2026-05-01-22-19 .md  2026-05-01-docs-update-documentation- 2026-05-01-22-21 .md  2026-05-01-docs-update-documentation- 2026-05-01-22-47 .md  2026-05-01-docs-update-documentation- 2026-05-01-22-48 .md  2026-05-01-docs-update-documentation- 2026-05-01-22-49 .md  2026-05-01-docs-update-documentation- 2026-05-01-22-50 .md  2026-05-01-docs-update-documentation- 2026-05-01-22-51 .md  2026-05-01-docs-update-documentation- 2026-05-01-22-52 .md  (+20 more)
frontend/: .env.example  STATUS.json  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.test.ts  (+3 more)
migrations/: 001_create_products_table.down.sql
src/: main.rs
(+39 files in other folders)
