[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "tls-rustls", "migrate", "chrono", "uuid"], optional = true }
rust_decimal = { version = "1", features = ["serde"] }

[features]
default = []
database = ["sqlx"]
